# english_learning_app

./: .flake8  .gitignore  bot.py  client.py  config.py  fastapiclient.py  main.py  pyproject.toml
.github/workflows/: run_checks.yml
app/models/: database.py  models.py
app/routers/: exercises.py  topics.py  users.py  words.py
src/app/api/: api.py
src/app/api/routers/: topics.py  users.py  utils.py  words.py
src/app/models/: database.py  models.py
src/app/repositories/: topics_repo.py  users_repo.py
src/app/routers/: exercises.py  topics.py  users.py
src/migrations/: env.py
src/migrations/versions/: 51c1748d7aa2_initial.py  e4867a690f6d_added_tables.py
