[tool.poetry]
name = "english_learning_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
aiogram = "^2.17.1"
SQLAlchemy = "^1.4.29"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
psycopg2-binary = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
